cargo-features = ["profile-rustflags"]

[package]
name = "rust_sorts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust_sorts"
crate-type = ["cdylib", "lib"]

[dev-dependencies]
criterion = "0.5.1"
# criterion-cycles-per-byte = "0.6.0"
criterion-perf-events = "0.4.0"
perfcnt = "0.8.0"

[[bench]]
name = "bench"
harness = false

[dependencies]
rand = "0.8.5"
introsort = { version = "0.6.0", features = [ "float" ] }
pdqsort = "1.0.3"
rustc-serialize = "0.3.25"
once_cell = "1.19"

[profile.release]
debug = true
lto = true
opt-level = 3
# codegen-units = 1  // will potentially slow down the runtime performance
panic = "abort"

[target.'cfg(target_arch = "x86_64")'.release]
rustflags = ["-C", "target-feature=+avx2,+fma"]
