cargo-features = ["profile-rustflags"]

[package]
name = "rust_sorts"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust_sorts"
crate-type = ["cdylib", "lib"]

[dev-dependencies]
criterion = { version = "0.5.0", features = ["html_reports"] }
# criterion-cycles-per-byte = "0.6.0"
criterion-perf-events = "0.4.0"
perfcnt = "0.8.0"

[[bench]]
name = "bench"
harness = false

[dependencies]
pyo3 = { version = "0.20.3", features = ["extension-module"] }
rand = "0.8.5"
rustc-serialize = "0.3.25"
once_cell = "1.19"
crumsort = "0.1.0"
rayon = "1.9.0"

[profile.dev]
codegen-units = 1
debug = 2
incremental = false
lto ="off"
opt-level = 3
debug-assertions = true

[profile.release]
codegen-units = 1  # this will potentially slow down the SIMD benchmarks
debug = false
incremental = false  # disable incremental compilation
lto = "thin"
opt-level = 3
panic = "abort"
